Inscribirse view y headerComponent - Se desarrolla un base gráfica de inscribirse View - hace falta crear el componente de cada avatar - se agrega el componente header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduGame-scl</title>
+
+    <!-- Archivo de diseño general -->
+     <link rel="stylesheet" href="index.css">
+     <link rel="stylesheet" href="config.css">
 </head>
 <body>
-    
+
+    <header id="header"></header>
+    <main id="root">
+    <footer id="footer"></footer>
+
+    </main>
+
+
+    <!-- Archivo js -->
+    <script src="views/inscribirse/inscribirseView.js" type="module"></script>
 </body>
 </html>
